# webassembly-cloud

./: README.md  errata.md
chapter2/: wasm_parser.go  wasm_parser1.go  wasm_parser2.go
chapter3/: add.js  add.wat  calc.js  calc.wat  example.js  example.wat  export.js  export.wat  string.js  string.wat  table.js  table.wat  wrap.js  wrap.wat
chapter4/complex_type_wasm_bindgen/: cargo.toml
chapter4/complex_type_wasm_bindgen/src/: lib.rs
chapter4/cuckoo_filter/: Cargo.toml  app.js
chapter4/cuckoo_filter/src/: lib.rs
chapter4/sample_binding/: cargo.toml  index.js  package.json  webpack.config.js
chapter4/sample_binding/src/: lib.rs
chapter5/cuckoo_wapc/: schema.widl  wapc.js
chapter5/cuckoo_wapc/src/: lib.rs
chapter5/cuckoo_wapc_complex/: Cargo.toml  Makefile  schema.widl
chapter5/cuckoo_wapc_complex/src/: lib.rs
chapter5/wapc_go/: main.go
chapter5/wapc_rust/: Cargo.toml
chapter5/wapc_rust/src/: main.rs
chapter6/cuckoo_http/: Cargo.toml
chapter6/cuckoo_http/src/: httprequest.rs  main.rs  wasm.rs
chapter6/go_cuckoo_http/: main.go
chapter6/node_cuckoo_http/: cuckoo.js
chapter7/wasmgo/: Dockerfile  cuckoo_wapc.wasm  go.mod  go.sum  main.go
chapter7/wasmrust/: Cargo.toml  Dockerfile
chapter7/wasmrust/src/: httprequest.rs  main.rs  wasm.rs
chapter8/: docker-compose.yaml
chapter8/envoy/: Dockerfile.proxy  envoy.yaml
