[package]
name = "invoker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.24.0"
wapc="0.10.1"
wasmtime-wasi = "0.24.0"
wasmtime-provider="0.0.3"
anyhow = "1.0.31"
wascc-codec = "0.9.1"
serde = "1.0.126"
serde_json = "1.0.41"
serdeconv="0.4.0"
serde_derive = "1.0.126"
[dev-dependencies]
wascc-codec="0.9.1"
env_logger = "0.8.3"
